--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web client for journ, a simple journal",
   "main": "server.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "jasmine",
+    "start": "webpack-dev-server --inline --content-base ."
   },
   "keywords": [
     "journ",
@@ -13,5 +14,18 @@
     "client"
   ],
   "author": "Patrick Grasso",
-  "license": "GPL-3.0"
+  "license": "GPL-3.0",
+  "devDependencies": {
+    "babel-core": "^6.7.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.1"
+  }
 }
