--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web client for journ, a simple journal",
   "main": "server.js",
   "scripts": {
-    "test": "jasmine",
+    "test": "jest",
     "start": "webpack-dev-server --inline --content-base ."
   },
   "keywords": [
@@ -17,9 +17,12 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "babel-core": "^6.7.4",
+    "babel-jest": "^9.0.3",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "jest-cli": "^0.9.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
