--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web client for journ, a simple journal",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "start": "webpack-dev-server --inline --content-base ."
   },
   "keywords": [
